--- a/src/styles.css
+++ b/src/styles.css
@@ -15,12 +15,12 @@
 body {
     height: 100vh;
     width: auto;
-    background-color: var(--strong-shadow);
+    /* background-color: var(--strong-shadow); */
     /* background-image: linear-gradient(to right, #686868, var(--tertiary-color)); */
-    /* background-repeat: round repeat; */
     margin: 0 auto;
     font-family: "Raleway", sans-serif; 
-    color: rgb(207, 207, 207);
+    /* color: rgb(207, 207, 207); */
+    color: black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,17 +34,17 @@ header {
   /* box-shadow: var(--mild-shadow); */
 }
 
+#hero {
+  color: black
+}
+
 nav {
   text-align:center;
   display:flex;
 }
 
-/* nav button {
-    background-color: grey;
-    border-radius: 50px;
-} */
-
 nav button {
+  font-size: 15px;
   background-color: grey;
   border-radius: 50px;
   cursor: pointer;
