--- a/src/styles.css
+++ b/src/styles.css
@@ -23,22 +23,24 @@ body {
     color: black;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     /* justify-content: center; */
 }
 
 header {
   width: 100%;
-  padding-left: 15%;
+  /* padding-left: 15%; */
   background-color: var(--main-color);
   /* box-shadow: var(--mild-shadow); */
 }
 
 #hero {
+  padding-left: 5%;
   color: black
 }
 
 nav {
+  padding-left: 5%;
   text-align:center;
   display:flex;
 }
@@ -72,35 +74,21 @@ nav button.triangle-shadow:hover::after {
 
 #content {
   margin-top: 24px;
-  width: 85%;
+  padding-left: 5%;
+  padding-right: 5%;
+  /* width: 85%; */
   /* display: flex; */
   gap: 24px;
 }
 
-img {
-  height: 80%;
-  width: 60%;
-  border-radius: 20%;
+#subtitle {
+  text-align: center;
 }
-
-
 
 h1, h2, h3, h4, h5, h6 {font-family: "Cinzel", serif;} 
 
-.gallery { 
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  gap: 12px;
-  margin-bottom: 34px;
-}
-
-.gallery img {
-  height: 25%;
-  width: 30%;
-}
-
 .footer {
+  text-align: center;
   padding-bottom: 12px;
 }
 
