--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ nav button.triangle-shadow:hover::after {
   padding-left: 12.5%;
   padding-right: 12.5%;
   /* display: flex; */
-  gap: 24px;
+  /* gap: 24px; */
 }
 
 #subtitle {
@@ -92,6 +92,56 @@ footer {
   padding-bottom: 12px;
 }
 
+.main {
+  /* margin: 0 12px; */
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+#title {
+  font-size: 24px;
+}
+
+.projects-header {
+  align-content: end;
+}
+
+.projects {
+  display: flex;
+  margin-right: 20px;
+  gap: 14px;
+  padding-bottom: 24px;
+  /* margin: 8px; */
+} 
+
+.project {
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-left: 8px solid orange;
+  border-radius: 8px;
+  box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.2);
+  transition: .3s;
+}
+
+.project:hover {
+  border-left-width: 11px;
+}
+
+.project-title {
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.project .icons {
+  display: flex;
+  margin-top: auto;
+  align-content: end;
+  justify-content: right;
+  gap: 8px;
+}
 @keyframes App-logo {}
 
 /*   ===== TABLET  media query overrides mobile styles ===== */
