renamed icons to podcast-links

--- a/src/styles.css
+++ b/src/styles.css
@@ -140,7 +140,7 @@ footer {
   padding-right: 6px; 
 }
 
-.podcast .icons {
+.podcast-links {
   display: flex;
   padding-top: 4px;
   margin-top: auto;
