--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* styles.css */
+/* logos not perfectly "centered" inside of image, shows with border-radius */
 
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
@@ -142,6 +143,7 @@ footer {
 .podcast-links {
   display: flex;
   padding-top: 4px;
+  padding-right: 4px;
   margin-top: auto;
   align-content: end;
   justify-content: right;
