--- a/src/styles.css
+++ b/src/styles.css
@@ -16,11 +16,11 @@
 body {
     height: 100vh;
     width: auto;
-    background-color: var(--strong-shadow);
+    /* background-color: var(--strong-shadow); */
     /* background-image: linear-gradient(to right, #686868, var(--tertiary-color)); */
     margin: 0 auto;
     font-family: "Raleway", sans-serif; 
-    color: rgb(207, 207, 207);
+    /* color: rgb(207, 207, 207); */
     display: flex;
     flex-direction: column;
     /* align-items: center; */
@@ -109,7 +109,7 @@ footer {
   padding: 10px 2px 10px 10px;
   display: flex;
   flex-direction: column;
-  background-color: rgb(72, 57, 57);
+  /* background-color: rgb(72, 57, 57); */
   /* color: black; */
   border-left: 8px solid var(--main-color);
   border-radius: 8px;
@@ -131,6 +131,7 @@ footer {
   display: flex;
   align-items: center;
   /* justify-content: space-between; */
+  padding-right: 8px;
 }
 
 .podcast-content img {
